<resources>
    <string name="app_name">Cinema_app</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Do not have an account?</string>
    <string name="signup">SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="welcome_to_cinema_app">Welcome to Cinema App</string>
</resources>

