<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="224dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableEnd="@drawable/baseline_email_24"
        tools:ignore="TextFields"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="575dp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:clickable="true"
        android:onClick="signUpText"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        tools:layout_editor_absoluteY="572dp"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>


